--- a/style.css
+++ b/style.css
@@ -4,56 +4,45 @@
 
 body{ 
     margin: 0;
-    min-height: 100vh;
-    background: radial-gradient(#e6ccb2,#6a040f);
-    /* background: rgb(56, 49, 49); */
+    background-image: url(Images/Bg.png);
+    position: relative;
+    width: 100%;
+    height: 100vh; 
+    background-size: cover;
+    background-position: center;
+    font-family: 'Rubik Wet Paint', cursive;
 }
 .heading  {
-    font-family: 'Rubik Wet Paint', cursive;
     color: #ff9f1c;
     text-align: center;
     font-size: 4em;
 }
 .game-info-highScore {
-    font-family: 'Rubik Wet Paint', cursive;
-    font-size: 2em;
+    font-size: 1.5em;
     color:#d4d700;
 }
 .game-info{
-    font-family: 'Rubik Wet Paint', cursive;
     color: beige;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .game-info-details{
     grid-column: 1/5;
     display: flex;
-    /* display: grid; */
     justify-content: space-around;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px;
     top: 50px;
-    left: 10px;
+    left: 10px; */
 }
 
 .game-container{
     display: grid;
     grid-template-columns: repeat(4, auto);
-    gap: 10px;
+    grid-gap: 10px;
     margin: 50px auto;
     justify-content: center;
     perspective: 500px;
 }
-
-@media (max-width: 600px) {
-    .game-container {
-      grid-template-columns: repeat(1, auto)
-    }
-  
-    .game-info-container {
-      flex-direction: column;
-      align-items: center;
-    }
-  }
 
 .card{
     cursor: -webkit-grab; cursor: grab;
@@ -61,9 +50,7 @@ body{
     height: 165px;
     width: 145px;
     border-radius: 12px;
-    /* background:radial-gradient(#9d0208,#9d0208,#ff9f1c,#9d0208,#9d0208); */
     background:radial-gradient(#ff9f1c,#9d0208);
-    /* background: radial-gradient(#e85d04,#9d0208); */
 }
 .card.visible .card-back{
     transform: rotateY(-180deg); 
@@ -73,9 +60,15 @@ body{
     transform: rotateY(0); 
 }
 
-.card.matched .user-hidden-image{
-    animation: dance 1s linear infinite 500ms;
+.card.visible.disable .card-front{
+    pointer-events: none;
+    cursor: not-allowed;
+}
 
+.card.matched.disable .user-hidden-image{
+    animation: dance 1s linear infinite 500ms;
+    pointer-events: none;
+    cursor: not-allowed; 
 }
 
 @keyframes dance{
@@ -97,7 +90,6 @@ body{
     bottom: 0;
     left: 0;
     right: 0;
-    /* display: flex; */
     justify-content: center;
     align-items: center;
     z-index: 10;
@@ -109,6 +101,7 @@ body{
 .overlay-text.visible {
     display: flex;
     flex-direction: column;
+    cursor: -webkit-grab; cursor: ;
     animation: overlay-grow 700ms forwards;
 }
 
