--- a/style.css
+++ b/style.css
@@ -1,38 +1,42 @@
 *{ 
     box-sizing: border-box;
 }
-
+html{
+    min-height: 100vh;
+    font-family: 'Rubik Wet Paint', cursive;
+}
 body{ 
     margin: 0;
     background-image: url(Images/Bg.png);
     position: relative;
-    width: 100%;
-    height: 100vh; 
     background-size: cover;
     background-position: center;
-    font-family: 'Rubik Wet Paint', cursive;
+    
 }
 .heading  {
     color: #ff9f1c;
     text-align: center;
     font-size: 4em;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: #dc2f02;
 }
 .game-info-highScore {
     font-size: 1.5em;
     color:#d4d700;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 .game-info{
     color: beige;
     font-size: 1.5em;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
 }
 
 .game-info-details{
-    grid-column: 1/5;
+    grid-column: 1/-1;
     display: flex;
     justify-content: space-around;
-    /* margin-bottom: 20px;
-    top: 50px;
-    left: 10px; */
 }
 
 .game-container{
@@ -120,7 +124,6 @@ body{
         background-color: rgba(0, 0, 0, .85);
         font-size: 10em;
     }
-
 }
 
 .card-face{
@@ -173,6 +176,7 @@ body{
         grid-template-columns: repeat(2, auto);
     }
     .game-info-details {
-        grid-template-columns: repeat(1, auto);
+       flex-direction: column;
+       align-items: center;
     }
 }
